--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: Europe/London
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://pucechan.ga
+url: http://pucechan.github.io
 root: /
 permalink: :year/:month/:title/
 permalink_defaults:
