--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: Europe/London
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://pucechan.github.io
+url: http://pucechan.ga
 root: /
 permalink: :year/:month/:title/
 permalink_defaults:
@@ -64,6 +64,10 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: pucechan
+
+plugins:
+  - hexo-generator-cname
+  - hexo-deployer-git
 
 disqus_shortname: pucechans-corner
 
