--- a/_config.yml
+++ b/_config.yml
@@ -65,6 +65,11 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 theme: pucechan
 
+plugins:
+  - hexo-generator-cname
+  - hexo-deployer-git
+
+markdown: 'default'
 disqus_shortname: pucechans-corner
 
 # Deployment
